[gd_scene load_steps=2 format=3 uid="uid://cadwvfjeima8x"]

[ext_resource type="Script" path="res://scripts/canvas_interface.gd" id="1_pf4ul"]

[node name="CanvasInterface" type="CanvasLayer"]
script = ExtResource("1_pf4ul")

[node name="MenuBar" type="MenuBar" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="File" type="PopupMenu" parent="MenuBar"]
size = Vector2i(115, 116)
item_count = 4
item_0/text = "Open..."
item_0/id = 2
item_1/text = "Save..."
item_1/id = 1
item_2/text = "New Canvas"
item_2/id = 3
item_3/text = "Export..."
item_3/id = 4

[node name="Canvas" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
title = "File"
item_count = 3
item_0/text = "Resize..."
item_1/text = "Clear"
item_1/id = 1
item_2/text = "Change cloth color..."
item_2/id = 2

[node name="Layers" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
title = "File"
item_count = 2
item_0/text = "Add layer"
item_1/text = "Remove layer"
item_1/id = 1

[connection signal="id_pressed" from="MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="id_pressed" from="MenuBar/Canvas" to="." method="_on_canvas_id_pressed"]
[connection signal="id_pressed" from="MenuBar/Layers" to="." method="_on_layers_id_pressed"]
